--- a/docs/src/index.css
+++ b/docs/src/index.css
@@ -79,6 +79,14 @@
     text-indent: 1.5rem hanging;
 }
 
+.sticky-real {
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -ms-sticky;
+    position: -o-sticky;
+    position: sticky;
+}
+
 @layer components {
     .link-red {
         @apply underline underline-offset-[3px] decoration-1 decoration-red-light hover:decoration-red-bright
