--- a/docs/index.css
+++ b/docs/index.css
@@ -732,6 +732,10 @@ video {
   margin-left: 2rem;
 }
 
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -744,8 +748,8 @@ video {
   margin-right: 1.5rem;
 }
 
-.mr-8 {
-  margin-right: 2rem;
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .mt-16 {
@@ -754,6 +758,10 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-48 {
@@ -770,26 +778,6 @@ video {
 
 .mt-\[48rem\] {
   margin-top: 48rem;
-}
-
-.mr-1 {
-  margin-right: 0.25rem;
-}
-
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.block {
-  display: block;
 }
 
 .inline-block {
@@ -816,10 +804,6 @@ video {
   height: 1rem;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .h-\[85vh\] {
   height: 85vh;
 }
@@ -844,9 +828,8 @@ video {
   height: 100vh;
 }
 
-.h-min {
-  height: -moz-min-content;
-  height: min-content;
+.min-h-\[270px\] {
+  min-height: 270px;
 }
 
 .min-h-\[480px\] {
@@ -855,18 +838,6 @@ video {
 
 .min-h-full {
   min-height: 100%;
-}
-
-.min-h-\[150\%\] {
-  min-height: 150%;
-}
-
-.min-h-\[\] {
-  min-height: ;
-}
-
-.min-h-\[270px\] {
-  min-height: 270px;
 }
 
 .w-0\.5 {
@@ -901,13 +872,12 @@ video {
   width: 100vw;
 }
 
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
-}
-
 .min-w-\[1248px\] {
   min-width: 1248px;
+}
+
+.min-w-\[60\%\] {
+  min-width: 60%;
 }
 
 .max-w-\[1920px\] {
@@ -935,12 +905,25 @@ video {
   flex-grow: 0;
 }
 
+.flex-grow-\[0\.5\] {
+  flex-grow: 0.5;
+}
+
+.flex-grow-\[3\] {
+  flex-grow: 3;
+}
+
 .origin-bottom {
   transform-origin: bottom;
 }
 
 .origin-top {
   transform-origin: top;
+}
+
+.-translate-x-3 {
+  --tw-translate-x: -0.75rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-x-64 {
@@ -1108,22 +1091,9 @@ video {
   background-color: rgb(180 32 42 / var(--tw-bg-opacity));
 }
 
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
 }
 
 .pb-2 {
@@ -1150,10 +1120,6 @@ video {
   padding-top: 2rem;
 }
 
-.pl-1 {
-  padding-left: 0.25rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1170,18 +1136,13 @@ video {
   vertical-align: text-bottom;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-2xs {
   font-size: 0.625rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-5xl {
@@ -1212,11 +1173,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-semibold {
@@ -1319,12 +1275,6 @@ video {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.transition-\[margin-right\] {
-  transition-property: margin-right;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .transition-transform {
@@ -1493,24 +1443,12 @@ video {
 }
 
 @media (min-width: 480px) {
-  .xs\:visible {
-    visibility: visible;
-  }
-
   .xs\:mr-8 {
     margin-right: 2rem;
   }
 
-  .xs\:block {
-    display: block;
-  }
-
   .xs\:flex {
     display: flex;
-  }
-
-  .xs\:hidden {
-    display: none;
   }
 
   .xs\:h-8 {
@@ -1519,11 +1457,6 @@ video {
 
   .xs\:p-4 {
     padding: 1rem;
-  }
-
-  .xs\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 
   .xs\:text-xl {
@@ -1549,12 +1482,18 @@ video {
     display: block;
   }
 
-  .sm\:hidden {
-    display: none;
-  }
-
   .sm\:gap-16 {
     gap: 4rem;
+  }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .sm\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .sm\:text-6xl {
@@ -1576,16 +1515,6 @@ video {
     font-size: 0.75rem;
     line-height: 1rem;
   }
-
-  .sm\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .sm\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
 }
 
 @media (min-width: 768px) {
@@ -1601,12 +1530,13 @@ video {
     display: block;
   }
 
-  .md\:h-8 {
-    height: 2rem;
-  }
-
   .md\:max-w-\[50vw\] {
     max-width: 50vw;
+  }
+
+  .md\:-translate-x-6 {
+    --tw-translate-x: -1.5rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .md\:gap-3 {
@@ -1617,19 +1547,13 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
 }
 
 @media (min-width: 1536px) {
+  .\32xl\:hidden {
+    display: none;
+  }
+
   .\32xl\:w-full {
     width: 100%;
   }
