--- a/docs/index.css
+++ b/docs/index.css
@@ -554,6 +554,52 @@ video {
   --tw-contain-style:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
+@media (min-width: 1800px) {
+  .container {
+    max-width: 1800px;
+  }
+}
+
 .link-red {
   text-decoration-line: underline;
   text-decoration-color: #df3e23;
@@ -648,8 +694,8 @@ video {
   pointer-events: none;
 }
 
-.fixed {
-  position: fixed;
+.pointer-events-auto {
+  pointer-events: auto;
 }
 
 .absolute {
@@ -684,28 +730,12 @@ video {
   top: 1rem;
 }
 
-.top-\[500px\] {
-  top: 500px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[-\] {
-  top: -;
-}
-
 .top-\[-16px\] {
   top: -16px;
 }
 
-.-z-10 {
-  z-index: -10;
+.top-\[500px\] {
+  top: 500px;
 }
 
 .-z-20 {
@@ -714,6 +744,10 @@ video {
 
 .-z-50 {
   z-index: -50;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .z-40 {
@@ -750,10 +784,6 @@ video {
 
 .ml-6 {
   margin-left: 1.5rem;
-}
-
-.ml-8 {
-  margin-left: 2rem;
 }
 
 .mr-1 {
@@ -804,6 +834,10 @@ video {
   margin-top: 48rem;
 }
 
+.block {
+  display: block;
+}
+
 .inline-block {
   display: inline-block;
 }
@@ -840,12 +874,12 @@ video {
   height: 990px;
 }
 
-.h-\[calc\(100\%\+1px\)\] {
-  height: calc(100% + 1px);
-}
-
 .h-\[calc\(100\%\+1rem\+2rem\)\] {
   height: calc(100% + 1rem + 2rem);
+}
+
+.h-\[calc\(100\%\+32px\)\] {
+  height: calc(100% + 32px);
 }
 
 .h-full {
@@ -854,18 +888,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[calc\] {
-  height: calc;
-}
-
-.h-\[125\%\] {
-  height: 125%;
-}
-
-.h-\[calc\(100\%\+32px\)\] {
-  height: calc(100% + 32px);
 }
 
 .min-h-\[270px\] {
@@ -900,6 +922,10 @@ video {
   width: 24px;
 }
 
+.w-\[70\%\] {
+  width: 70%;
+}
+
 .w-\[85\%\] {
   width: 85%;
 }
@@ -912,28 +938,12 @@ video {
   width: 100vw;
 }
 
-.w-\[70\%\] {
-  width: 70%;
-}
-
 .min-w-\[1248px\] {
   min-width: 1248px;
 }
 
-.min-w-\[65\%\] {
-  min-width: 65%;
-}
-
-.min-w-\[70\%\] {
-  min-width: 70%;
-}
-
 .min-w-\[270px\] {
   min-width: 270px;
-}
-
-.min-w-\[50\%\] {
-  min-width: 50%;
 }
 
 .min-w-\[60\%\] {
@@ -951,10 +961,6 @@ video {
 .max-w-fit {
   max-width: -moz-fit-content;
   max-width: fit-content;
-}
-
-.flex-shrink {
-  flex-shrink: 1;
 }
 
 .shrink-0 {
@@ -977,32 +983,12 @@ video {
   flex-grow: 3;
 }
 
-.flex-grow-\[2\] {
-  flex-grow: 2;
-}
-
-.flex-grow-\[20\] {
-  flex-grow: 20;
-}
-
-.flex-grow-\[1\] {
-  flex-grow: 1;
-}
-
 .origin-bottom {
   transform-origin: bottom;
 }
 
-.origin-right {
-  transform-origin: right;
-}
-
 .origin-top {
   transform-origin: top;
-}
-
-.origin-center {
-  transform-origin: center;
 }
 
 .-translate-x-3 {
@@ -1052,11 +1038,6 @@ video {
 
 .rotate-90 {
   --tw-rotate: 90deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-x-150 {
-  --tw-scale-x: 1.5;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1180,23 +1161,9 @@ video {
   background-color: rgb(121 58 128 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
 .bg-red-main {
   --tw-bg-opacity: 1;
   background-color: rgb(180 32 42 / var(--tw-bg-opacity));
-}
-
-.bg-black-main {
-  --tw-bg-opacity: 1;
-  background-color: rgb(6 6 8 / var(--tw-bg-opacity));
-}
-
-.bg-black-main\/50 {
-  background-color: rgb(6 6 8 / 0.5);
 }
 
 .object-cover {
@@ -1226,10 +1193,6 @@ video {
 
 .pt-8 {
   padding-top: 2rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
 }
 
 .text-center {
@@ -1375,26 +1338,6 @@ video {
   opacity: 1;
 }
 
-.blur {
-  --tw-blur: blur(8px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.blur-md {
-  --tw-blur: blur(12px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.blur-lg {
-  --tw-blur: blur(16px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.blur-sm {
-  --tw-blur: blur(4px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .backdrop-blur-\[2px\] {
   --tw-backdrop-blur: blur(2px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -1413,22 +1356,14 @@ video {
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.transition-transform {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .transition-opacity {
   transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-transform {
+  transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1441,20 +1376,16 @@ video {
   transition-duration: 200ms;
 }
 
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .duration-\[350ms\] {
   transition-duration: 350ms;
 }
 
 .duration-\[400ms\] {
   transition-duration: 400ms;
-}
-
-.duration-100 {
-  transition-duration: 100ms;
-}
-
-.duration-300 {
-  transition-duration: 300ms;
 }
 
 .ease-in-out {
@@ -1610,10 +1541,6 @@ video {
 }
 
 @media (min-width: 480px) {
-  .xs\:mr-8 {
-    margin-right: 2rem;
-  }
-
   .xs\:flex {
     display: flex;
   }
