--- a/docs/index.css
+++ b/docs/index.css
@@ -847,10 +847,6 @@ video {
   grid-column: span 4 / span 4;
 }
 
-.m-2 {
-  margin: 0.5rem;
-}
-
 .m-6 {
   margin: 1.5rem;
 }
@@ -881,6 +877,10 @@ video {
 
 .ml-6 {
   margin-left: 1.5rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
 }
 
 .mr-1 {
@@ -931,18 +931,6 @@ video {
   margin-top: 48rem;
 }
 
-.ml-8 {
-  margin-left: 2rem;
-}
-
-.ml-12 {
-  margin-left: 3rem;
-}
-
-.ml-0 {
-  margin-left: 0px;
-}
-
 .inline-block {
   display: inline-block;
 }
@@ -955,12 +943,20 @@ video {
   display: none;
 }
 
+.aspect-\[20\/11\] {
+  aspect-ratio: 20/11;
+}
+
 .h-0 {
   height: 0px;
 }
 
 .h-16 {
   height: 4rem;
+}
+
+.h-2 {
+  height: 0.5rem;
 }
 
 .h-20 {
@@ -1005,10 +1001,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-2 {
-  height: 0.5rem;
 }
 
 .min-h-\[270px\] {
@@ -1075,8 +1067,8 @@ video {
   width: 100vw;
 }
 
-.w-3\/5 {
-  width: 60%;
+.min-w-4 {
+  min-width: 1rem;
 }
 
 .min-w-\[1248px\] {
@@ -1103,29 +1095,13 @@ video {
   max-width: 512px;
 }
 
+.max-w-\[600px\] {
+  max-width: 600px;
+}
+
 .max-w-fit {
   max-width: -moz-fit-content;
   max-width: fit-content;
-}
-
-.max-w-\[240px\] {
-  max-width: 240px;
-}
-
-.max-w-\[480px\] {
-  max-width: 480px;
-}
-
-.max-w-\[786px\] {
-  max-width: 786px;
-}
-
-.max-w-\[600\] {
-  max-width: 600;
-}
-
-.max-w-\[600px\] {
-  max-width: 600px;
 }
 
 .shrink-0 {
@@ -1168,11 +1144,6 @@ video {
 
 .-translate-x-full {
   --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-32 {
-  --tw-translate-y: -8rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1431,11 +1402,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .font-semibold {
@@ -1795,18 +1761,6 @@ video {
     display: block;
   }
 
-  .sm\:w-3\/5 {
-    width: 60%;
-  }
-
-  .sm\:w-2\/5 {
-    width: 40%;
-  }
-
-  .sm\:w-1\/5 {
-    width: 20%;
-  }
-
   .sm\:gap-16 {
     gap: 4rem;
   }
@@ -1853,8 +1807,16 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
   .md\:mb-32 {
     margin-bottom: 8rem;
+  }
+
+  .md\:ml-12 {
+    margin-left: 3rem;
   }
 
   .md\:ml-8 {
@@ -1873,24 +1835,12 @@ video {
     margin-top: 11rem;
   }
 
-  .md\:ml-12 {
-    margin-left: 3rem;
-  }
-
-  .md\:mb-12 {
-    margin-bottom: 3rem;
-  }
-
-  .md\:mb-20 {
-    margin-bottom: 5rem;
-  }
-
   .md\:block {
     display: block;
   }
 
-  .md\:w-3\/5 {
-    width: 60%;
+  .md\:h-36 {
+    height: 9rem;
   }
 
   .md\:max-w-\[50vw\] {
